syntax = "proto3";

package io.restorecommerce.auth;
import "io/restorecommerce/attribute.proto";
import "google/protobuf/timestamp.proto";

/**
 * Subject of creating User
 */
message Subject {
  optional string id = 1; // user id
  optional string scope = 2; // target scope (ID of the target scoping entity)
  optional bool unauthenticated = 3; // for unauthenticated context
  optional string token = 4;
}

message Tokens {
  optional string name = 1; // token name
  optional double expires_in = 2; // expiration date for token
  optional string token = 3; // token
  repeated string scopes = 4; // identifier for role_association
  optional string type = 5; // type of token eg: access_token, refresh_token
  optional bool interactive = 6;
  optional double last_login = 7;
}

message HierarchicalScope {
  optional string id = 1; // root node
  repeated HierarchicalScope children = 2; // children nodes
  optional string role = 3; // role identifier associated with root node scope
}

message RoleAssociation {
  optional string role = 1;  // role ID
  repeated io.restorecommerce.attribute.Attribute attributes = 2;  // useful attributes for RBAC/ABAC like organizational scope
  optional string id = 3; // identifier for role_association
  optional google.protobuf.Timestamp created = 4; // timestamp when the role was created
}

message HierarchicalScopesRequest {
  optional string token = 1;
}

message HierarchicalScopesResponse {
  optional string subject_id = 1;
  repeated HierarchicalScope hierarchical_scopes = 2;
  optional string token = 3;
}